--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "autoload": {
         "psr-4": {
             "Tonysm\\TurboLaravel\\": "src"
-        }
+        },
+        "files": ["src/helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
