--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/support": "^8.47"
+        "php": "^7.4|^8.0|^8.1",
+        "illuminate/support": "^8.47|^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.3"
+        "orchestra/testbench": "^6.24",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
