--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.0|^8.1",
-        "illuminate/support": "^8.47|^9.0"
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.24",
