Allow faking Turbo Streams for testing

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
               "\\Tonysm\\TurboLaravel\\TurboServiceProvider"
             ],
             "aliases": {
-                "Turbo": "\\Tonysm\\TurboLaravel\\Facades\\Turbo"
+                "Turbo": "\\Tonysm\\TurboLaravel\\Facades\\Turbo",
+                "TurboStream": "\\Tonysm\\TurboLaravel\\Facades\\TurboStream"
             }
         }
     },
