--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^8.0|^8.1",
-        "illuminate/support": "^8.47|^9.0"
+        "illuminate/support": "^8.47|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.24|^7.0",
+        "orchestra/testbench": "^6.24|^7.0|^8.0",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
