--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "illuminate/support": "^8.47|^9.0|^10.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.10",
         "orchestra/testbench": "^6.24|^7.0|^8.0",
         "phpunit/phpunit": "^9.5"
     },
