--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1",
-        "illuminate/support": "^8.47|^9.0|^10.0"
+        "php": "^8.1",
+        "illuminate/support": "^10.0"
     },
     "require-dev": {
         "laravel/pint": "^1.10",
-        "orchestra/testbench": "^6.24|^7.0|^8.0",
+        "orchestra/testbench": "^8.0",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
