Replaces windows builds with macos

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          verbose="true"
 >
     <testsuites>
-        <testsuite name="Tonysm Test Suite">
+        <testsuite name="Turbo Laravel Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
