--- a/testbench.yaml
+++ b/testbench.yaml
@@ -1,4 +1,5 @@
 providers:
+  - HotwiredLaravel\TurboLaravel\TurboServiceProvider
   - Workbench\App\Providers\WorkbenchAppServiceProvider
 
 migrations: true
@@ -7,14 +8,18 @@ seeders:
   - Workbench\Database\Seeders\DatabaseSeeder
 
 env:
-  APP_KEY: "a2ps3dFoNmyehsm7r0VFZ0Iq64hwBpqI"
-  APP_DEBUG: true
+  - APP_KEY="a2ps3dFoNmyehsm7r0VFZ0Iq64hwBpqI"
+  - APP_DEBUG=true
+  - DB_CONNECTION=sqlite
 
 workbench:
   start: '/articles'
+  install: false
+  welcome: true
   user: 'tonysm@hey.com'
   build:
     - create-sqlite-db
-    - migrate:fresh
+    - db:wipe
+    - migrate:refresh
   assets: []
   sync: []
