--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,5 @@
 /.php_cs.dist       export-ignore
 /psalm.xml          export-ignore
 /psalm.xml.dist     export-ignore
+/workbench          export-ignore
+/testbench.yaml     export-ignore
