--- a/testbench.yaml
+++ b/testbench.yaml
@@ -5,6 +5,9 @@ providers:
 migrations:
   - workbench/database/migrations
 
+components:
+  - workbench/resources/views/components
+
 workbench:
   start: '/articles'
   install: true
