Use Workbench 1 API
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/testbench.yaml
+++ b/testbench.yaml
@@ -12,6 +12,9 @@ workbench:
   start: '/articles'
   install: true
   welcome: true
+  discovers:
+    web: true
+    views: true
   build:
     - create-sqlite-db
     - db:wipe
